ability to detect empty topic/partitions
